[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Team Shark LOGO FULL - Text.png" type="Texture" id=1]
[ext_resource path="res://Backgrounds/BG_Black.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Team Shark LOGO FULL - shark.png" type="Texture" id=3]
[ext_resource path="res://Rooms/introScreen.gd" type="Script" id=4]
[ext_resource path="res://Objects/CutsceneSystem-TextHandler.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/FadeIn-Classic.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/FadeOut-Classic.tscn" type="PackedScene" id=7]
[ext_resource path="res://SFX Files/HD SFX - Ground pound_3.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "effect",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )
textWriter = NodePath("CutsceneSystem-TextHandler")
roomGoto = "res://Rooms/menu01.tscn"

[node name="BG" parent="." instance=ExtResource( 2 )]
z_index = -5

[node name="text-TeamShark" type="AnimatedSprite" parent="."]
position = Vector2( 432, 232 )
scale = Vector2( 2, 2 )
frames = SubResource( 6 )
playing = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 440, 256 )
scale = Vector2( 2, 2 )
z_index = -1
frames = SubResource( 7 )

[node name="CutsceneSystem-TextHandler" parent="." instance=ExtResource( 5 )]

[node name="FadeIn-Classic" parent="." instance=ExtResource( 6 )]
visible = false

[node name="FadeOut" parent="." instance=ExtResource( 7 )]
visible = false

[node name="he_spin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"
